--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 /* Estilo do corpo */
 body {
     font-family: Arial, sans-serif;
-    background-color: #121212;
+    background-image: url(https://evilhazard.com.br/wp-content/uploads/2022/06/re44FVKxzYtWIAECGTh.jpg);
     color: #f1f1f1;
     line-height: 1.6;
     margin: 0;
@@ -36,7 +36,7 @@ header .header-content p {
 
 /* Seção de História */
 .story {
-    background-color: #2d2d2d;
+    background-image: url(https://evilhazard.com.br/wp-content/uploads/2022/06/re44FVKxzYtWIAECGTh.jpg);
     padding: 40px;
     margin: 20px 0;
     border-radius: 10px;
